--- a/arch/arm/configs/ast2500_defconfig
+++ b/arch/arm/configs/ast2500_defconfig
@@ -1550,6 +1550,7 @@ CONFIG_FB_BOTH_ENDIAN=y
 #
 # Frame buffer hardware drivers
 #
+# CONFIG_FB_ASTVGA is not set
 CONFIG_FB_AST=y
 # CONFIG_DISPLAY_SUPPORT is not set
 CONFIG_AST_DAC=y
@@ -1908,6 +1909,7 @@ CONFIG_AST_IPMI_BT=y
 CONFIG_AST_PECI=y
 CONFIG_AST_MBX=y
 # CONFIG_AST_GPIO is not set
+# CONFIG_AST_JPEG is not set
 CONFIG_AST_JTAG=y
 CONFIG_AST_MCTP=y
 CONFIG_AST_XDMA=y
@@ -2034,7 +2036,9 @@ CONFIG_PROC_PAGE_MONITOR=y
 # CONFIG_PROC_CHILDREN is not set
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
-# CONFIG_TMPFS is not set
+CONFIG_TMPFS=y
+CONFIG_TMPFS_POSIX_ACL=y
+CONFIG_TMPFS_XATTR=y
 # CONFIG_HUGETLB_PAGE is not set
 # CONFIG_CONFIGFS_FS is not set
 # CONFIG_MISC_FILESYSTEMS is not set
