--- a/arch/arm/configs/ast2400_defconfig
+++ b/arch/arm/configs/ast2400_defconfig
@@ -1519,9 +1519,7 @@ CONFIG_MFD_SYSCON=y
 # Frame buffer Devices
 #
 # CONFIG_FB is not set
-# CONFIG_FB_BOTH_ENDIAN is not set
-# CONFIG_FB_BIG_ENDIAN is not set
-# CONFIG_FB_LITTLE_ENDIAN is not set
+# CONFIG_FB_ASTVGA is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 # CONFIG_VGASTATE is not set
 
@@ -1856,6 +1854,7 @@ CONFIG_AST_IPMI_BT=y
 CONFIG_AST_PECI=y
 CONFIG_AST_MBX=y
 # CONFIG_AST_GPIO is not set
+# CONFIG_AST_JPEG is not set
 CONFIG_AST_JTAG=y
 CONFIG_AST_MCTP=y
 CONFIG_AST_XDMA=y
@@ -1981,7 +1980,9 @@ CONFIG_PROC_PAGE_MONITOR=y
 # CONFIG_PROC_CHILDREN is not set
 CONFIG_KERNFS=y
 CONFIG_SYSFS=y
-# CONFIG_TMPFS is not set
+CONFIG_TMPFS=y
+CONFIG_TMPFS_POSIX_ACL=y
+CONFIG_TMPFS_XATTR=y
 # CONFIG_HUGETLB_PAGE is not set
 # CONFIG_CONFIGFS_FS is not set
 # CONFIG_MISC_FILESYSTEMS is not set
