--- a/drivers/video/fbdev/Kconfig
+++ b/drivers/video/fbdev/Kconfig
@@ -281,6 +281,9 @@ config FB_PM2_FIFO_DISCONNECT
 	help
 	  Support the Permedia2 FIFO disconnect feature.
 
+config FB_ASTVGA
+	bool "AST VGA FB"
+	
 source "drivers/video/fbdev/aspeed/Kconfig"
 
 config FB_ARMCLCD
