--- a/drivers/soc/aspeed/Makefile
+++ b/drivers/soc/aspeed/Makefile
@@ -2,6 +2,7 @@
 # Makefile for the ASPEED drivers.
 #
 
+obj-$(CONFIG_AST_VGAVIDEO)	+= ast_vgavideo.o
 obj-$(CONFIG_AST_VIDEO)		+= ast_video.o
 obj-$(CONFIG_AST_LPC)		+= ast-lpc.o ast-lpc_plus.o 
 obj-$(CONFIG_AST_IPMI_KCS)	+= ast-kcs.o
