--- a/arch/arm/plat-aspeed/Makefile
+++ b/arch/arm/plat-aspeed/Makefile
@@ -16,7 +16,7 @@ endif
 
 obj-$(CONFIG_AST2400_BMC) += ast2400-irq.o ast2400-scu.o dev-ast2400-uart.o #dev-ast2400-i2c.o
 
-obj-y			+= dev-lpc.o 
+#obj-y			+= dev-lpc.o 
 #obj-n   := dummy.o
 #platform
 obj-y			+= dev-uart.o dev-vuart.o dev-wdt.o dev-rtc.o dev-gpio.o dev-sgpio.o dev-crypto.o
@@ -25,7 +25,7 @@ obj-y			+= dev-uart.o dev-vuart.o dev-wdt.o dev-rtc.o dev-gpio.o dev-sgpio.o dev
 obj-y 	                += dev-nor.o dev-nand.o dev-sdhci.o
 
 #bus
-obj-y                   += dev-i2c.o dev-spi.o dev-ehci.o dev-uhci.o dev-espi.o dev-peci.o dev-kcs.o dev-bt.o dev-snoop.o dev-mbx.o dev-pcie.o dev-jtag.o dev-mctp.o dev-xdma.o
+obj-y                   += dev-i2c.o dev-spi.o dev-ehci.o dev-uhci.o dev-espi.o dev-peci.o dev-kcs.o dev-bt.o dev-snoop.o dev-mbx.o dev-jtag.o dev-mctp.o dev-xdma.o
 
 #dev
 obj-y			+= dev-udc11.o dev-hid.o dev-udc20.o
