--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -57,14 +57,12 @@
 			compatible = "arm,cortex-a7";
 			device_type = "cpu";
 			reg = <0>;
-			clock-frequency = <48000000>;
 		};
 
 		CPU1: cpu@1 {
 			compatible = "arm,cortex-a7";
 			device_type = "cpu";
 			reg = <1>;
-			clock-frequency = <48000000>;
 		};
 
 	};
@@ -76,7 +74,7 @@
 				<GIC_PPI 14 (GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>,
 				<GIC_PPI 11 (GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>,
 				<GIC_PPI 10 (GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>;
-		clock-frequency = <25000000>;
+		clock-frequency = <800000000>;
 	};
 
 	memory@80000000 {
@@ -136,7 +134,7 @@
 			number_of_chip_select = /bits/ 16 <2>;
 			interrupts = <GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>;
 		};
-		
+
 		spi1: spi1@1e630000 {
 			/* reg : cs0 : cs1 */
 			reg = <0x1e630000 0x100 
@@ -361,11 +359,11 @@
 			syscon: syscon@1e6e2000 {
 				compatible = "aspeed,aspeed-scu", "aspeed,ast2600-scu", "syscon", "simple-mfd";
 				reg = <0x1e6e2000 0x1000>;
+				ranges = <0 0x1e6e2000 0x1000>;
 				#address-cells = <1>;
 				#size-cells = <1>;
 				#clock-cells = <1>;
 				#reset-cells = <1>;
-				ranges = <0 0x1e6e2000 0x1000>;
 
 				vga_scratch: scratch {
 					compatible = "aspeed,bmc-misc";
@@ -558,6 +556,7 @@
 				clocks = <&syscon ASPEED_CLK_APB>;
 				interrupt-controller;
 				#interrupt-cells = <2>;
+				status = "disabled";
 			};
 
 			timer: timer@1e782000 {
@@ -649,7 +648,8 @@
 				no-loopback-test;
 				port_address = <0x3f8>;
 				serial_irq = <4>;
-                        };
+				status = "disabled";
+            };
 
 			vuart1: serial@1e788000 {
 				compatible = "aspeed,ast2600-vuart";
@@ -676,7 +676,7 @@
                         };
 
 			lpc: lpc@1e789000 {
-				compatible = "aspeed,ast-lpc", "simple-mfd", "syscon";
+				compatible = "aspeed,ast2600-lpc", "simple-mfd";
 				reg = <0x1e789000 0x200>;
 
 				#address-cells = <1>;
@@ -687,13 +687,13 @@
 					compatible = "aspeed,ast2600-lpc-bmc", "simple-mfd", "syscon";
 					reg = <0x0 0x80>;
 					reg-io-width = <4>;
+
 					#address-cells = <1>;
 					#size-cells = <1>;
 					ranges = <0x0 0x0 0x80>;
 
 					kcs1: kcs1@0 {
 						compatible = "aspeed,ast2600-kcs-bmc";
-						reg = <0x0 0x80>;
 						interrupts = <GIC_SPI 138 IRQ_TYPE_LEVEL_HIGH>;
 						kcs_chan = <1>;
 						kcs_addr = <0xCA0>;
@@ -702,7 +702,6 @@
 
 					kcs2: kcs2@0 {
 						compatible = "aspeed,ast2600-kcs-bmc";
-						reg = <0x0 0x80>;
 						interrupts = <GIC_SPI 139 IRQ_TYPE_LEVEL_HIGH>;
 						kcs_chan = <2>;
 						kcs_addr = <0xCA8>;
@@ -711,21 +710,10 @@
 
 					kcs3: kcs3@0 {
 						compatible = "aspeed,ast2600-kcs-bmc";
-						reg = <0x0 0x80>;
 						interrupts = <GIC_SPI 140 IRQ_TYPE_LEVEL_HIGH>;
 						kcs_chan = <3>;
 						kcs_addr = <0xCA2>;
 					};
-
-					kcs4: kcs4@0 {
-						compatible = "aspeed,ast2600-kcs-bmc";
-						reg = <0x0 0x120>;
-						interrupts = <GIC_SPI 141 IRQ_TYPE_LEVEL_HIGH>;
-						kcs_chan = <4>;
-						kcs_addr = <0xCA4>;
-						status = "disabled";
-					};
-
 				};
 
 				lpc_host: lpc-host@80 {
@@ -737,10 +725,18 @@
 					#size-cells = <1>;
 					ranges = <0x0 0x80 0x1e0>;
 
+					kcs4: kcs4@0 {
+						compatible = "aspeed,ast2500-kcs-bmc";
+						interrupts = <8>;
+						kcs_chan = <4>;
+						status = "disabled";
+					};
+
 					lpc_ctrl: lpc-ctrl@0 {
 						compatible = "aspeed,ast2600-lpc-ctrl";
 						reg = <0x0 0x80>;
 						clocks = <&syscon ASPEED_CLK_GATE_LCLK>;
+						status = "disabled";
 					};
 
 					lpc_snoop: lpc-snoop@0 {
