--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -917,7 +917,9 @@
 		resets = <&syscon ASPEED_RESET_I2C>;
 		reg = <0x0 0x40>;
 		clocks = <&syscon ASPEED_CLK_APB>;
+#if 0
 		new-mode;
+#endif
 	};
 
 	i2c0: i2c@80 {
@@ -930,7 +932,8 @@
 		clocks = <&syscon ASPEED_CLK_APB>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 110 IRQ_TYPE_LEVEL_HIGH>;
-		dma-mode;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c1_default>;
 	};
 
 	i2c1: i2c@100 {
@@ -943,6 +946,8 @@
 		clocks = <&syscon ASPEED_CLK_APB>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 111 IRQ_TYPE_LEVEL_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c2_default>;
 	};
 
 	i2c2: i2c@180 {
@@ -955,6 +960,8 @@
 		clocks = <&syscon ASPEED_CLK_APB>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 112 IRQ_TYPE_LEVEL_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c3_default>;
 	};
 
 	i2c3: i2c@200 {
@@ -967,6 +974,8 @@
 		clocks = <&syscon ASPEED_CLK_APB>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 113 IRQ_TYPE_LEVEL_HIGH>;
+		pinctrl-names = "default";
+                pinctrl-0 = <&pinctrl_i2c4_default>;
 	};
 
 	i2c4: i2c@280 {
@@ -979,6 +988,8 @@
 		clocks = <&syscon ASPEED_CLK_APB>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 114 IRQ_TYPE_LEVEL_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c5_default>;
 	};
 
 	i2c5: i2c@300 {
@@ -991,6 +1002,8 @@
 		clocks = <&syscon ASPEED_CLK_APB>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 115 IRQ_TYPE_LEVEL_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c6_default>;
 	};
 
 	i2c6: i2c@380 {
@@ -1003,6 +1016,8 @@
 		clocks = <&syscon ASPEED_CLK_APB>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 116 IRQ_TYPE_LEVEL_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c7_default>;
 	};
 
 	i2c7: i2c@400 {
@@ -1015,6 +1030,8 @@
 		clocks = <&syscon ASPEED_CLK_APB>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 117 IRQ_TYPE_LEVEL_HIGH>;
+		pinctrl-names = "default";
+                pinctrl-0 = <&pinctrl_i2c8_default>;
 	};
 
 	i2c8: i2c@480 {
@@ -1027,6 +1044,8 @@
 		clocks = <&syscon ASPEED_CLK_APB>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 118 IRQ_TYPE_LEVEL_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c9_default>;
 	};
 
 	i2c9: i2c@500 {
@@ -1040,6 +1059,8 @@
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 119 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c10_default>;
 	};
 
 	i2c10: i2c@580 {
@@ -1053,6 +1074,8 @@
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 120 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c11_default>;
 	};
 
 	i2c11: i2c@600 {
@@ -1066,6 +1089,8 @@
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 121 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c12_default>;
 	};
 
 	i2c12: i2c@680 {
@@ -1079,6 +1104,8 @@
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 122 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
+		pinctrl-names = "default";
+                pinctrl-0 = <&pinctrl_i2c13_default>;
 	};
 
 	i2c13: i2c@700 {
@@ -1092,6 +1119,8 @@
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 123 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c14_default>;
 	};
 
 	i2c14: i2c@780 {
@@ -1105,6 +1134,8 @@
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 124 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c15_default>;
 	};
 
 	i2c15: i2c@800 {
@@ -1118,23 +1149,92 @@
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 125 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_i2c16_default>;
 	};
 
 };
 
 &peci {
-        peci0: peci-bus@0 {
-                compatible = "aspeed,ast2600-peci";
-                reg = <0x0 0x60>;
-                #address-cells = <1>;
-                #size-cells = <0>;
-		interrupts = <GIC_SPI 38 IRQ_TYPE_LEVEL_HIGH>;
-                clocks = <&syscon ASPEED_CLK_GATE_REF0CLK>;
-                resets = <&syscon ASPEED_RESET_PECI>;
-                clock-frequency = <24000000>;
-                msg-timing = <1>;
-                addr-timing = <1>;
-                rd-sampling-point = <8>;
-                cmd-timeout-ms = <1000>;
+    peci0: peci-bus@0 {
+        compatible = "aspeed,ast2600-peci";
+        reg = <0x0 0x60>;
+        #address-cells = <1>;
+        #size-cells = <0>;
+	interrupts = <GIC_SPI 38 IRQ_TYPE_LEVEL_HIGH>;
+        clocks = <&syscon ASPEED_CLK_GATE_REF0CLK>;
+        resets = <&syscon ASPEED_RESET_PECI>;
+        clock-frequency = <24000000>;
+        msg-timing = <1>;
+        addr-timing = <1>;
+        rd-sampling-point = <8>;
+        cmd-timeout-ms = <1000>;
+    };
+};
+
+&pinctrl {
+	pinctrl_i2c1_default: i2c1_default {
+	            function = "I2C1";
+	            groups = "I2C1";
+	    };
+	pinctrl_i2c2_default: i2c2_default {
+                function = "I2C2";
+                groups = "I2C2";
+        };
+	pinctrl_i2c3_default: i2c3_default {
+                function = "I2C3";
+                groups = "I2C3";
+        };
+	pinctrl_i2c4_default: i2c4_default {
+                function = "I2C4";
+                groups = "I2C4";
+        };
+	pinctrl_i2c5_default: i2c5_default {
+                function = "I2C5";
+                groups = "I2C5";
+        };
+	pinctrl_i2c6_default: i2c6_default {
+                function = "I2C6";
+                groups = "I2C6";
+        };
+	pinctrl_i2c7_default: i2c7_default {
+                function = "I2C7";
+                groups = "I2C7";
+        };
+	pinctrl_i2c8_default: i2c8_default {
+                function = "I2C8";
+                groups = "I2C8";
+        };
+	pinctrl_i2c9_default: i2c9_default {
+                function = "I2C9";
+                groups = "I2C9";
+        };
+	pinctrl_i2c10_default: i2c10_default {
+                function = "I2C10";
+                groups = "I2C10";
+        };
+	pinctrl_i2c11_default: i2c11_default {
+                function = "I2C11";
+                groups = "I2C11";
+        };
+	pinctrl_i2c12_default: i2c12_default {
+                function = "I2C12";
+                groups = "I2C12";
+        };
+	pinctrl_i2c13_default: i2c13_default {
+                function = "I2C13";
+                groups = "I2C13";
+        };
+	pinctrl_i2c14_default: i2c14_default {
+                function = "I2C14";
+                groups = "I2C14";
+        };
+	pinctrl_i2c15_default: i2c15_default {
+                function = "I2C15";
+                groups = "I2C15";
+        };
+	pinctrl_i2c16_default: i2c16_default {
+                function = "I2C16";
+                groups = "I2C16";
         };
 };
