--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -56,13 +56,13 @@
 		CPU0: cpu@0 {
 			compatible = "arm,cortex-a7";
 			device_type = "cpu";
-			reg = <0>;
+			reg = <0xf00>;
 		};
 
 		CPU1: cpu@1 {
 			compatible = "arm,cortex-a7";
 			device_type = "cpu";
-			reg = <1>;
+			reg = <0xf01>;
 		};
 
 	};
