--- a/arch/arm/boot/dts/aspeed-ast2600-evb.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600-evb.dts
@@ -59,7 +59,7 @@
                         };
         };
 };
-
+#if 0
 &sdhci_slot0{
 	status = "okay";
 };
@@ -67,7 +67,7 @@
 &sdhci_slot1{
 	status = "okay";
 };
-
+#endif
 &emmc_slot0{
 	status = "okay";
 };
