ARM: dts: aspeed: add clock-frequency to CPU nodes
Add CPU clock frequency to avoid warning messages.

--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -57,12 +57,14 @@
 			compatible = "arm,cortex-a7";
 			device_type = "cpu";
 			reg = <0xf00>;
+			clock-frequency = <800000000>;
 		};
 
 		CPU1: cpu@1 {
 			compatible = "arm,cortex-a7";
 			device_type = "cpu";
 			reg = <0xf01>;
+			clock-frequency = <800000000>;
 		};
 
 	};
