--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -269,6 +269,7 @@
 				reg = <0x1e610000 0x100>;
 				clocks = <&syscon ASPEED_CLK_HPLL>;
 				resets = <&syscon ASPEED_RESET_PWM>;
+				status = "disabled";
 
 				fan@0 {
 					reg = <0x00>;
@@ -449,7 +450,7 @@
 			adc0: adc@1e6e9000 {
 				compatible = "aspeed,ast2600-adc";
 				reg = <0x1e6e9000 0x100>;
-				clocks = <&syscon ASPEED_CLK_APB>;
+				clocks = <&syscon ASPEED_CLK_APB2>;
 				resets = <&syscon ASPEED_RESET_ADC>;
 				interrupts = <GIC_SPI 46 IRQ_TYPE_LEVEL_HIGH>;
 				#io-channel-cells = <1>; 
@@ -459,7 +460,7 @@
 			adc1: adc@1e6e9100 {
 				compatible = "aspeed,ast2600-adc";
 				reg = <0x1e6e9100 0x100>;
-				clocks = <&syscon ASPEED_CLK_APB>;
+				clocks = <&syscon ASPEED_CLK_APB2>;
 				resets = <&syscon ASPEED_RESET_ADC>;
 				interrupts = <GIC_SPI 46 IRQ_TYPE_LEVEL_HIGH>;
 				#io-channel-cells = <1>;
@@ -482,7 +483,7 @@
 				clock-names = "eclk", "vclk";
 				resets = <&syscon ASPEED_RESET_VIDEO>;
 			};
-
+#if 0
 			sdhci: sdhci@1e740000 {
 				#interrupt-cells = <1>;
 				compatible = "aspeed,aspeed-sdhci-irq", "simple-mfd";
@@ -504,6 +505,8 @@
 					clocks = <&syscon ASPEED_CLK_SDIO>;
 					power-gpio = <&gpio0 ASPEED_GPIO(V, 0) GPIO_ACTIVE_LOW>;
 					power-switch-gpio = <&gpio0 ASPEED_GPIO(V, 1) GPIO_ACTIVE_LOW>;
+					pinctrl-names = "default";
+					pinctrl-0 = <&pinctrl_sd1_default>;
 					status = "disabled";
 				};
 
@@ -516,11 +519,13 @@
 					clocks = <&syscon ASPEED_CLK_SDIO>;
 					power-gpio = <&gpio0 ASPEED_GPIO(V, 2) GPIO_ACTIVE_LOW>;
                                         power-switch-gpio = <&gpio0 ASPEED_GPIO(V, 3) GPIO_ACTIVE_LOW>;
+					pinctrl-names = "default";
+					pinctrl-0 = <&pinctrl_sd1_default>;
 					status = "disabled";
 				};
 
 			};
-
+#endif
 			emmc: emmc@1e750000 {
 				#interrupt-cells = <1>;
 				compatible = "aspeed,aspeed-emmc-irq", "simple-mfd";
@@ -538,7 +543,10 @@
 					reg = <0x100 0x100>;
 					interrupts = <0>;
 					interrupt-parent = <&emmc>;
-					clocks = <&syscon ASPEED_CLK_EMMC>;
+					sdhci,auto-cmd12;
+					clocks = <&syscon ASPEED_CLK_GATE_EMMCEXTCLK>;
+					pinctrl-names = "default";
+					pinctrl-0 = <&pinctrl_emmc_default>;
 					status = "disabled";
 				};
 
@@ -551,7 +559,7 @@
 				reg = <0x1e780000 0x800>;
 				interrupts = <GIC_SPI 40 IRQ_TYPE_LEVEL_HIGH>;
 				gpio-ranges = <&pinctrl 0 0 248>;
-				clocks = <&syscon ASPEED_CLK_APB>;
+				clocks = <&syscon ASPEED_CLK_APB2>;
 				interrupt-controller;
 				#interrupt-cells = <2>;
 			};
@@ -563,7 +571,7 @@
 				reg = <0x1e780800 0x800>;
 				interrupts = <GIC_SPI 11 IRQ_TYPE_LEVEL_HIGH>;
 				gpio-ranges = <&pinctrl 0 0 248>;
-				clocks = <&syscon ASPEED_CLK_APB>;
+				clocks = <&syscon ASPEED_CLK_APB1>;
 				interrupt-controller;
 				#interrupt-cells = <2>;
 				status = "disabled";
@@ -581,7 +589,7 @@
 						  <&gic  GIC_SPI 21 IRQ_TYPE_LEVEL_HIGH>,
 						  <&gic  GIC_SPI 22 IRQ_TYPE_LEVEL_HIGH>,
 						  <&gic  GIC_SPI 23 IRQ_TYPE_LEVEL_HIGH>;
-				clocks = <&syscon ASPEED_CLK_APB>;
+				clocks = <&syscon ASPEED_CLK_APB1>;
 				clock-names = "PCLK";
 				status = "disabled";
 			};
@@ -617,25 +625,21 @@
 			wdt1: watchdog@1e785000 {
 				compatible = "aspeed,ast2600-wdt";
 				reg = <0x1e785000 0x40>;
-				clocks = <&syscon ASPEED_CLK_APB>;
 			};
 
 			wdt2: watchdog@1e785040 {
 				compatible = "aspeed,ast2600-wdt";
 				reg = <0x1e785040 0x40>;
-				clocks = <&syscon ASPEED_CLK_APB>;
 			};
 
 			wdt3: watchdog@1e785080 {
 				compatible = "aspeed,ast2600-wdt";
 				reg = <0x1e785080 0x40>;
-				clocks = <&syscon ASPEED_CLK_APB>;
 			};
 
 			wdt4: watchdog@1e7850C0 {
 				compatible = "aspeed,ast2600-wdt";
 				reg = <0x1e7850C0 0x40>;
-				clocks = <&syscon ASPEED_CLK_APB>;
 			};
 
 			vuart0: serial@1e787000 {
@@ -643,7 +647,7 @@
 				reg = <0x1e787000 0x40>;
 				reg-shift = <2>;
 				interrupts = <GIC_SPI 147 IRQ_TYPE_LEVEL_HIGH>;
-				clocks = <&syscon ASPEED_CLK_APB>;
+				clocks = <&syscon ASPEED_CLK_APB1>;
 				no-loopback-test;
 				port_address = <0x3f8>;
 				serial_irq = <4>;
@@ -654,7 +658,7 @@
 				reg = <0x1e787800 0x40>;
 				reg-shift = <2>;
 				interrupts = <GIC_SPI 147 IRQ_TYPE_LEVEL_HIGH>;
-				clocks = <&syscon ASPEED_CLK_APB>;
+				clocks = <&syscon ASPEED_CLK_APB1>;
 				no-loopback-test;
 				port_address = <0x3f8>;
 				serial_irq = <4>;
@@ -666,7 +670,7 @@
 				reg = <0x1e788000 0x40>;
 				reg-shift = <2>;
 				interrupts = <GIC_SPI 148 IRQ_TYPE_LEVEL_HIGH>;
-				clocks = <&syscon ASPEED_CLK_APB>;
+				clocks = <&syscon ASPEED_CLK_APB2>;
 				no-loopback-test;
 				port_address = <0x2f8>;
 				serial_irq = <3>;
@@ -678,7 +682,7 @@
                                 reg = <0x1e788800 0x40>;
                                 reg-shift = <2>;
                                 interrupts = <GIC_SPI 148 IRQ_TYPE_LEVEL_HIGH>;
-                                clocks = <&syscon ASPEED_CLK_APB>;
+                                clocks = <&syscon ASPEED_CLK_APB2>;
                                 no-loopback-test;
                                 port_address = <0x2f8>;
                                 serial_irq = <3>;
@@ -926,8 +930,8 @@
 		compatible = "aspeed,ast2600-i2c-global", "syscon", "simple-mfd";
 		resets = <&syscon ASPEED_RESET_I2C>;
 		reg = <0x0 0x40>;
-		clocks = <&syscon ASPEED_CLK_APB>;
-#if 0
+		clocks = <&syscon ASPEED_CLK_APB2>;
+#if 1
 		new-mode;
 #endif
 	};
@@ -939,7 +943,7 @@
 
 		reg = <0x80 0x80 0xC00 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 110 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
@@ -953,7 +957,7 @@
 
 		reg = <0x100 0x80 0xC20 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 111 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
@@ -967,7 +971,7 @@
 
 		reg = <0x180 0x80 0xC40 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 112 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
@@ -981,7 +985,7 @@
 
 		reg = <0x200 0x40 0xC60 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 113 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
@@ -995,7 +999,7 @@
 
 		reg = <0x280 0x80 0xC80 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 114 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
@@ -1009,7 +1013,7 @@
 
 		reg = <0x300 0x40 0xCA0 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 115 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
@@ -1023,7 +1027,7 @@
 
 		reg = <0x380 0x80 0xCC0 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 116 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
@@ -1037,7 +1041,7 @@
 
 		reg = <0x400 0x80 0xCE0 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 117 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
@@ -1051,7 +1055,7 @@
 
 		reg = <0x480 0x80 0xD00 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 118 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
@@ -1065,7 +1069,7 @@
 
 		reg = <0x500 0x80 0xD20 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 119 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
@@ -1080,7 +1084,7 @@
 
 		reg = <0x580 0x80 0xD40 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 120 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
@@ -1095,7 +1099,7 @@
 
 		reg = <0x600 0x80 0xD60 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 121 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
@@ -1110,7 +1114,7 @@
 
 		reg = <0x680 0x80 0xD80 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 122 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
@@ -1125,7 +1129,7 @@
 
 		reg = <0x700 0x80 0xDA0 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 123 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
@@ -1140,7 +1144,7 @@
 
 		reg = <0x780 0x80 0xDC0 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 124 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
@@ -1155,7 +1159,7 @@
 
 		reg = <0x800 0x80 0xDE0 0x20>;
 		compatible = "aspeed,ast2600-i2c-bus";
-		clocks = <&syscon ASPEED_CLK_APB>;
+		clocks = <&syscon ASPEED_CLK_APB2>;
 		bus-frequency = <100000>;
 		interrupts = <GIC_SPI 125 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
@@ -1186,6 +1190,80 @@
 	pinctrl_usb2ah_default: usb2ah_default {
 		function = "USB2AH";
 		groups = "USB2AH";
+    };
+    pinctrl_usb2ad_default: usb2ad_default {
+        function = "USB2AD";
+        groups = "USB2AD";
+    };
+	pinctrl_usb2adp_default: usb2adp_default {
+        function = "USB2ADP";
+        groups = "USB2ADP";
+    };
+    pinctrl_usb11bhid_default: usb11bhid_default {
+        function = "USB11BHID";
+        groups = "USB11BHID";
+    };
+	pinctrl_usb2bd_default: usb2bd_default {
+        function = "USB2BD";
+        groups = "USB2BD";
+    };
+    pinctrl_usb2bh_default: usb2bh_default {
+        function = "USB2BH";
+        groups = "USB2BH";
+    };
+	pinctrl_pwm0_default: pwm0_default {
+        function = "PWM0";
+        groups = "PWM0";
+    };
+    pinctrl_pwm1_default: pwm1_default {
+        function = "PWM1";
+        groups = "PWM1";
+    };
+    pinctrl_pwm2_default: pwm2_default {
+        function = "PWM2";
+        groups = "PWM2";
+    };
+    pinctrl_pwm3_default: pwm3_default {
+        function = "PWM3";
+        groups = "PWM3";
+    };
+    pinctrl_pwm4_default: pwm4_default {
+        function = "PWM4";
+        groups = "PWM4";
+    };
+    pinctrl_pwm5_default: pwm5_default {
+        function = "PWM5";
+        groups = "PWM5";
+    };
+    pinctrl_pwm6_default: pwm6_default {
+        function = "PWM6";
+        groups = "PWM6";
+    };
+    pinctrl_pwm7_default: pwm7_default {
+        function = "PWM7";
+        groups = "PWM7";
+    };
+	pinctrl_sd1_default: sd1_default {
+        function = "SD1";
+        groups = "SD1";
+    };
+#if 0
+    pinctrl_sd1_8bits_default: sd1_8bits_default {
+        function = "SD1_8BITS";
+        groups = "SD1_8BITS";
+    };
+#endif
+    pinctrl_sd2_default: sd2_default {
+        function = "SD2";
+        groups = "SD2";
+    };
+	pinctrl_emmc_default: emmc_default {
+        function = "EMMC";
+        groups = "EMMC";
+    };
+	pinctrl_usb2ah_default: usb2ah_default {
+        function = "USB2AH";
+        groups = "USB2AH";
     };
     pinctrl_usb2ad_default: usb2ad_default {
         function = "USB2AD";
