--- a/arch/arm/boot/dts/aspeed-ast2600-evb.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600-evb.dts
@@ -63,7 +63,7 @@
 &pwm_tacho {
         status = "okay";
         pinctrl-names = "default";
-        pinctrl-0 = <&pinctrl_pwm0_default &pinctrl_pwm1_default>;
+        pinctrl-0 = <&pinctrl_pwm0_default &pinctrl_tach0_default &pinctrl_pwm1_default &pinctrl_tach1_default>;
 };
 
 #if 0
