dts: aspeed: g6: disable hace and acry in dtsi
enable hace and acry in a1
enable hace only in a0

--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -463,6 +463,7 @@
 				clocks = <&syscon ASPEED_CLK_GATE_YCLK>;
 				clock-names = "yclk";
 				resets = <&syscon ASPEED_RESET_HACE>;
+				status = "disabled";
 			};
 
 			acry: acry@1e6fa000 {
@@ -471,6 +472,7 @@
 				interrupts = <GIC_SPI 160 IRQ_TYPE_LEVEL_HIGH>;
 				clocks = <&syscon ASPEED_CLK_GATE_RSACLK>;
 				clock-names = "rsaclk";
+				status = "disabled";
 			};
 
 			hid: hid@1e6e1000 {
