ARM: dts: ast2600: Disable SGPIO by default
1. make SGPIO disabled by default
2. remove SGPIO enabling for AST2600 SLT board

--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -704,6 +704,7 @@
 
 				pinctrl-names = "default";
 				pinctrl-0 = <&pinctrl_sgpm1_default>;
+				status = "disabled";
 			};
 
 			sgpios0: sgpios@1e780700 {
