add ast_ssp module

--- a/drivers/soc/aspeed/Kconfig
+++ b/drivers/soc/aspeed/Kconfig
@@ -35,4 +35,9 @@ config ASPEED_XDMA
 	help
 	  Driver for XDMA
 
+config ASPEED_SSP
+	tristate "ASPEED SSP Driver"
+        default n
+        help
+          Driver for secondary-service-processor	
 endmenu
