correct the SRAM size
0x10000000~0x1000ffff: 64k w/ parity check
0x1001000~0x10015fff: 24k w/o parity check

--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -119,7 +119,8 @@
 
 		sram: sram@10000000 {
 			compatible = "mmio-sram";
-			reg = <0x10000000 0x10000>;      // 64K
+			/* the first 64K is with parity check */
+			reg = <0x10000000 0x16000>;
 		};
 
 		ssp_tcm: sram@1a000000 {
