dts: aspeed: g5: update sdhci

--- a/arch/arm/boot/dts/aspeed-g5.dtsi
+++ b/arch/arm/boot/dts/aspeed-g5.dtsi
@@ -569,7 +569,7 @@
 				ranges = <0x0 0x1e740000 0x1000>;
 
 				sdhci_slot0: sdhci_slot0@100 {
-					compatible = "aspeed,sdhci-ast2500";
+					compatible = "aspeed,ast2500-sdhci";
 					reg = <0x100 0x100>;
 					interrupts = <0>;
 					interrupt-parent = <&sdhci>;
@@ -579,7 +579,7 @@
 				};
 
 				sdhci_slot1: sdhci_slot1@200 {
-					compatible = "aspeed,sdhci-ast2500";
+					compatible = "aspeed,ast2500-sdhci";
 					reg = <0x200 0x100>;
 					interrupts = <1>;
 					interrupt-parent = <&sdhci>;
